--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -6,10 +6,10 @@
     </div>
     <div class="{{ include.format }}-header">
         <div class="container">
-                <h1 id="title"><a href="{{ "/" | relative_url }}">Marcella<br />Pereda</a></h1>
+                <h1 id="title"><a href="{{ "/" | relative_url }}" {% if include.format == 'small' %}style="color:transparent;"{% endif %}>Marcella<br />Pereda</a></h1>
             <ul>
-                <!--<li><a href="{{ "/news" | relative_url }}">News</a></li>                        
-                <li><a href="#">Resume</a></li>
+                <li><a href="{{ "/news" | relative_url }}">News</a></li>                        
+                <!--<li><a href="#">Resume</a></li>
                 <li><a href="#">Pictures</a></li>
                 <li><a href="#">Bio</a></li>
                 <li><a href="#">Contact</a></li>-->
