--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -9,8 +9,9 @@
                 <h1 id="title"><a href="{{ "/" | relative_url }}" {% if include.format == 'small' %}style="color:transparent;"{% endif %}>Marcella<br />Pereda</a></h1>
             <ul>
                 <li><a href="{{ "/news" | relative_url }}">News</a></li>                        
+                <li><a href="{{ "/pictures" | relative_url }}">Pictures</a></li>                        
                 <!--<li><a href="#">Resume</a></li>
-                <li><a href="#">Pictures</a></li>
+                
                 <li><a href="#">Bio</a></li>
                 <li><a href="#">Contact</a></li>-->
             </ul>
